--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\AddConstantVelocity.cs" />
      <Compile Include="Assets\Scripts\AddPlayerControledVelocity.cs" />
+     <Compile Include="Assets\Scripts\CopyPosition.cs" />
      <Compile Include="Assets\Scripts\RestartLevelWithButton.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>D:/Software/unity/KG_lab3/Lab3/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
