--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\AddConstantVelocity.cs" />
      <Compile Include="Assets\Scripts\AddPlayerControledVelocity.cs" />
      <Compile Include="Assets\Scripts\CopyPosition.cs" />
+     <Compile Include="Assets\Scripts\CursorHide.cs" />
      <Compile Include="Assets\Scripts\DestroyOnClick.cs" />
      <Compile Include="Assets\Scripts\LoadLevelOnCollision.cs" />
      <Compile Include="Assets\Scripts\RestartLevelOnCollision.cs" />
